k8s/microservices/registry/service.yaml
# Deploy ClusterIP Services
apiVersion: v1
kind: Service
metadata:
  name: eos-registry-service
  labels:
    app: eos-micro-services-registry

spec:
  selector:
    app: eos-micro-services-registry

  type: ClusterIP
  ports:
  - port: 8761
    targetPort: 8761
