k8s/microservices/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eos-registry-api
spec:
  rules:
  - host: dev-registry.e-torrence.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eos-registry-service
            port:
              number: 8761
  ingressClassName: nginx
